--- a/src/components/RecordField/RecordField.scss
+++ b/src/components/RecordField/RecordField.scss
@@ -4,7 +4,6 @@
   display: flex;
   flex-wrap: wrap;
   margin-top: 18px;
-  margin-left: 13px;
   align-items: center;
 }
 
